envoy-conf-tls.yaml
node:
  cluster: service_greeter
  id: test-id

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:     
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager            
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: service_httpbin }
          http_filters:          
          - name: envoy.filters.http.rbac 
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC       
              rules: 
                action: ALLOW
                policies:
                  "allow-sub-match-rule":
                    permissions:
                    - and_rules:
                        rules:
                        - header: { name: ":method", exact_match: "GET" }
                        - header: { name: "User", exact_match: "sal" }
                        - url_path:
                            path: { prefix: "/" }
                    principals:
                    - authenticated:
                        principal_name:
                          exact: "client-svc.domain.com"
          - name: envoy.filters.http.router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          require_client_certificate: true          
          common_tls_context:
            tls_certificates:
            - certificate_chain:
                filename: certs/server.crt
              private_key:
                filename: certs/server.key
            validation_context:
              trusted_ca:
                filename: certs/tls-ca-chain.crt 
  clusters:
  - name: service_httpbin
    connect_timeout: 2s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_httpbin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: httpbin.org
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext
